{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 345,
  "lineage": "a095d7d1-807f-6321-4de1-ac9b8d7419da",
  "resources": [
    {
      "module": "module.NAT-1",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-09-19T00:06:24.857-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/shaivin-project/regions/us-central1/routers/nat-router-1",
            "name": "nat-router-1",
            "network": "https://www.googleapis.com/compute/v1/projects/shaivin-project/global/networks/vpc-1",
            "project": "shaivin-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaivin-project/regions/us-central1/routers/nat-router-1"
          },
          "dependencies": [
            "module.vpc-1.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.NAT-1",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "shaivin-project/us-central1/nat-router-1/nat-gateway",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-gateway",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "shaivin-project",
            "region": "us-central1",
            "router": "nat-router-1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.NAT-1.google_compute_router.nat_router",
            "module.vpc-1.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.firewall-1",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "8000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-19T00:06:23.998-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/shaivin-project/global/firewalls/custom-ports-bastion",
            "log_config": [],
            "name": "custom-ports-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/shaivin-project/global/networks/vpc-1",
            "priority": 1000,
            "project": "shaivin-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaivin-project/global/firewalls/custom-ports-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "tag-1"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-1.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.firewall-2",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "8000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-19T00:06:23.886-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/shaivin-project/global/firewalls/custom-ports-pirivate-instance",
            "log_config": [],
            "name": "custom-ports-pirivate-instance",
            "network": "https://www.googleapis.com/compute/v1/projects/shaivin-project/global/networks/vpc-1",
            "priority": 1000,
            "project": "shaivin-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaivin-project/global/firewalls/custom-ports-pirivate-instance",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "tag-2"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-1.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gce-1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gce",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240904",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/shaivin-project/zones/us-central1-a/disks/bastion-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/shaivin-project/zones/us-central1-a/instances/bastion-host",
            "instance_id": "597093323018498923",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "shaivin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCpWaMd3FJVN3WDuwQzN9fXwNalN9dzgS0QnYKMGZ5blu2S0ASv5UZUUkoXriNyQh4s06Yi1k74RuN3GfdD9TXP9/gCMPiQeD8cV5Y0K4pEuMN736vuGX7ricyngO5ULRSJz3t+9oS66rAi/Iic8dhNeZ9ckPaV0WFTgpM43+kxEGuiKbU3lAUyO1ITRR4sknEUtKhcF7Y27lKfDo7kccn48shkLU+e88f8VGZ9W3spVdpXa4jtXFDFu0xXL8eIrB3wRnhxQSNyRVNgQbKq3nMUJQR+U5O7LTbtMy+83zaW0KtMawS6DfxXtliBAjvnAGiO6CePS6J/1q8IRYqofOxXCgf09e/fvdTmzQknUR977bUspIAW3rPdP+PuNQsn8jahjdtc0mUV/laX5Tv6y/p/kUnUDlQSKPD3zV8bYDdXw [...]
            },
            "metadata_fingerprint": "4CIBlmXd3PY=",
            "name": "bastion-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.122.211.40",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/shaivin-project/global/networks/vpc-1",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/shaivin-project/regions/us-central1/subnetworks/public-subnet",
                "subnetwork_project": "shaivin-project"
              }
            ],
            "project": "shaivin-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaivin-project/zones/us-central1-a/instances/bastion-host",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "tag-1"
            ],
            "tags_fingerprint": "WtlCuxy21h0=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.static-ip-1.google_compute_address.bastion_ip",
            "module.subnet-1.google_compute_subnetwork.subnet",
            "module.vpc-1.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gce-2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gce",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240904",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/shaivin-project/zones/us-central1-a/disks/app-laravel"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/shaivin-project/zones/us-central1-a/instances/app-laravel",
            "instance_id": "2550043604236530540",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "shaivin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCpWaMd3FJVN3WDuwQzN9fXwNalN9dzgS0QnYKMGZ5blu2S0ASv5UZUUkoXriNyQh4s06Yi1k74RuN3GfdD9TXP9/gCMPiQeD8cV5Y0K4pEuMN736vuGX7ricyngO5ULRSJz3t+9oS66rAi/Iic8dhNeZ9ckPaV0WFTgpM43+kxEGuiKbU3lAUyO1ITRR4sknEUtKhcF7Y27lKfDo7kccn48shkLU+e88f8VGZ9W3spVdpXa4jtXFDFu0xXL8eIrB3wRnhxQSNyRVNgQbKq3nMUJQR+U5O7LTbtMy+83zaW0KtMawS6DfxXtliBAjvnAGiO6CePS6J/1q8IRYqofOxXCgf09e/fvdTmzQknUR977bUspIAW3rPdP+PuNQsn8jahjdtc0mUV/laX5Tv6y/p/kUnUDlQSKPD3zV8bYDdXw [...]
            },
            "metadata_fingerprint": "4CIBlmXd3PY=",
            "name": "app-laravel",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/shaivin-project/global/networks/vpc-1",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/shaivin-project/regions/us-central1/subnetworks/private-subnet",
                "subnetwork_project": "shaivin-project"
              }
            ],
            "project": "shaivin-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaivin-project/zones/us-central1-a/instances/app-laravel",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "tag-2"
            ],
            "tags_fingerprint": "tsCgEUUTgrU=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.subnet-2.google_compute_subnetwork.subnet",
            "module.vpc-1.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.static-ip-1",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "bastion_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.122.211.40",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-09-19T00:06:12.467-07:00",
            "id": "projects/shaivin-project/regions/us-central1/addresses/static-ip-bastion",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "static-ip-bastion",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "shaivin-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaivin-project/regions/us-central1/addresses/static-ip-bastion"
          }
        }
      ]
    },
    {
      "module": "module.subnet-1",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-09-19T00:06:25.097-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/shaivin-project/regions/us-central1/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/shaivin-project/global/networks/vpc-1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "shaivin-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaivin-project/regions/us-central1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc-1.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-2",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-09-19T00:06:24.970-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/shaivin-project/regions/us-central1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/shaivin-project/global/networks/vpc-1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "shaivin-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaivin-project/regions/us-central1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc-1.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/shaivin-project/global/networks/vpc-1",
            "mtu": 0,
            "name": "vpc-1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2091413046315873164",
            "project": "shaivin-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaivin-project/global/networks/vpc-1"
          }
        }
      ]
    }
  ]
}